<resources>
    <string name="app_name">Inventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency">$</string>
    <string name="pairs">Pairs</string>
    <string name="bundleKey">item</string>
    <string name="archiveButton">Archive</string>
    <string name="restore">Restore</string>
    <string name="deleteItem">You really want to delete this item?</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addItem">Add</string>
    <string name="item_s_brand">Item\'s brand</string>
    <string name="item_s_quantity">Item\'s quantity</string>
    <string name="item_s_price">Item\'s price</string>
    <string name="item_s_name">Item\'s name</string>
    <string name="delete">Delete</string>
    <string name="details_of_item">Details of item</string>
    <string name="main_page">Main</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_brand">Enter brand</string>
    <string name="empty_fields_warning">Please, fill out all fields!</string>
    <string name="successfully_changed">Changes are saved!</string>
</resources>