<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DetailsFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/details_of_item"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:clickable="true"
            android:src="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageHolder"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="105dp"
            android:src="@android:drawable/ic_menu_report_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_s_name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageHolder" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageHolder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_name"
                android:background="@drawable/rounded_corner"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_s_price"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_price"
                android:background="@drawable/rounded_corner"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_s_brand"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_brand"
                android:background="@drawable/rounded_corner"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/item_s_quantity"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_amount"
                android:background="@drawable/rounded_corner"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/add_button"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>